--- a/hope/.github/workflows/ci-cd.yml
+++ b/hope/.github/workflows/ci-cd.yml
@@ -51,3 +51,25 @@ jobs:
 
     - name: Run tests
       run: mvn test
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up SSH
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+    - name: Deploy to server
+      run: |
+        ssh -o StrictHostKeyChecking=no root@39.107.155.56 << 'EOF'
+        cd /root/hope
+        git pull origin main
+        docker-compose down
+        docker-compose up -d --build
+        EOF
